# sfb_dfm

./: .gitignore  .gitmodules  README.md  aggregate_hydro.sh  check_delta_flows.py  check_inisalt.py  check_sources.py  nudged_features.pli  plot_MDU_bc.py  plot_salt.py  plot_sources.py  postprocess_cap_salinity_and_temperature.py  postprocess_dwaq_binaries_to_netcdf.py  run_launcher_part_0.sh  run_launcher_part_1.sh  run_launcher_part_2.sh  run_launcher_part_3.sh  run_launcher_part_4.sh  sfb_dfm.py  sfb_dfm_2.py  sfb_dfm_postprocessor.py  sfei_v19_net.nc  sfei_v20_0000_net.nc  sfei_v20_0001_net.nc  sfei_v20_0002_net.nc  sfei_v20_0003_net.nc  sfei_v20_0004_net.nc  sfei_v20_0005_net.nc  sfei_v20_0006_net.nc  sfei_v20_0007_net.nc  sfei_v20_0008_net.nc  sfei_v20_0009_net.nc  sfei_v20_0010_net.nc  sfei_v20_0011_net.nc  sfei_v20_0012_net.nc  sfei_v20_0013_net.nc  sfei_v20_0014_net.nc  sfei_v20_0015_net.nc  sfei_v20_net.nc  sfei_v20_straightened_0000_net.nc  (+21 more)
alameda_creek_climatology/: Alameda_Creek_Climatological_Temperature.csv  plot_real_vs_average.py  take_climatological_average.py
delta_temperature_climatology/: Delta_Climatological_Temperature.csv  plot_real_vs_average.py  take_climatological_average.py
derived/: grid-boundary.dbf  grid-boundary.shp  grid-boundary.shx  grid-cells.dbf  grid-cells.shx  grid-edges.dbf  grid-edges.shx  sfei_v20_straightened_net.dbf  (+25 more)
fill_missing_delta_flows/pytides2-0.0.5/: PKG-INFO  README.md  pyproject.toml  setup.py
fill_missing_delta_flows/pytides2-0.0.5/pytides2/: __init__.py  astro.py  constituent.py  nodal_corrections.py  tide.py
(+73 files in other folders)
